# aamlibrary

./: .travis.yml  CMakeLists.txt  HISTORY.txt  README.md  readme.txt
android/jni/: Android.mk  DemoFit.cpp
android/me/greatyao/: AAMFit.java
example/: run-build.bat  run-fit.bat
exe/: CMakeLists.txt  fit.cpp  train.cpp
msvc/: AAMLibrary.dsp  AAMLibrary.dsw  AAMLibrary.sln  AAMLibrary.vcproj  aambuilding.dsp  aambuilding.vcproj  aamfitting.dsp  aamfitting.vcproj
src/: AAM_Basic.cpp  AAM_Basic.h  AAM_CAM.cpp  AAM_CAM.h  AAM_IC.cpp  AAM_IC.h  AAM_MovieAVI.cpp  AAM_MovieAVI.h  AAM_PAW.cpp  AAM_PAW.h  AAM_PDM.cpp  AAM_PDM.h  AAM_Shape.cpp  AAM_Shape.h  AAM_TDM.cpp  AAM_TDM.h  AAM_Util.cpp  AAM_Util.h  CMakeLists.txt  Makefile  VJfacedetect.cpp  VJfacedetect.h
